Add the Play font, update hero text.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'> -->
     <link href='fonts/oxygen.css' rel='stylesheet' type='text/css'>
     <style type="text/css">
-        body { font-family: 'Oxygen', sans-serif; }
-        .light-font { font-weight: 300; }
+        .heavy-font {
+            font-weight: 400;
+        }
     </style>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'> -->
+    <link href='fonts/play.css' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/fluidable/fluidable-min.css">
@@ -26,17 +29,17 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body class="light-font">
+<body>
 
     <div class="section hero large-font">
         <div class="container">
             <div class="col-group">
-                <div class="col-mb-12 col-6">
+                <div class="col-mb-12 col-6 col-dt-4">
                     <img src="images/user.png" class="responsive rounded em10" id="user" />
                 </div>
-                <div class="col-mb-12 col-6">
-                    <div id="hero-hi">Hi!</div>
-                    <div id="hero-name">I'm <strong>Gautham Yerroju</strong>.</div>
+                <div class="col-mb-12 col-6 col-dt-8">
+                    <!-- <div id="hero-name"><strong>Gautham Yerroju</strong></div> -->
+                    <div id="hero-name">Gautham Yerroju</div>
                     <div id="hero-ticker">
                         <ul>
                             <li>Programmer</li>
@@ -50,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-mb-12">
-                    <p>I love to code and design. On a random day you'll find me coding, gaming, blogging or just thinking about the great questions of the universe. My dream is to build a J.A.R.V.I.S someday and of course, be Batman. A guy can dream.</p>
+                    <p class="heavy-font">I love to code and design. On a random day you'll find me coding, gaming, blogging or just thinking about the great questions of the universe. My dream is to build a J.A.R.V.I.S someday and of course, be Batman. A guy can dream.</p>
                 </div>
             </div>
         </div>
