Improve theme targeting.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body>
+<body class="themable">
     <div id="theme-switch" class="themable"></div>
 
     <div class="section hero large-font themable">
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="section devlog themable">
+    <div class="section devlog">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12">
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div class="section intro-me large-font themable">
+    <div class="section intro-me large-font">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-5 col-dt-4">
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="section intro-job large-font themable">
+    <div class="section intro-job large-font">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 hide-tab">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="section intro-hobby large-font themable">
+    <div class="section intro-hobby large-font">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-5 col-dt-4">
