Change some CSS names (started adopting BEM syntax), add z-index to theme switcher button, tweak responsive image CSS like what Bootstrap uses.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="themable">
     <div id="theme-switch" class="themable"></div>
 
-    <div class="section hero large-font themable">
+    <div class="section hero font--large themable">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-6 col-dt-4">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col-mb-12">
-                    <p class="heavy-font">I love to code and design. On a random day you'll find me coding, gaming, blogging or just thinking about the great questions of the universe. My dream is to build a J.A.R.V.I.S someday and of course, be Batman. A guy can dream.</p>
+                    <p class="font--heavy">I love to code and design. On a random day you'll find me coding, gaming, blogging or just thinking about the great questions of the universe. My dream is to build a J.A.R.V.I.S someday and of course, be Batman. A guy can dream.</p>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div class="section intro-me large-font">
+    <div class="section intro-me font--large">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-5 col-dt-4">
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="section intro-job large-font">
+    <div class="section intro-job font--large">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 hide-tab">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="section intro-hobby large-font">
+    <div class="section intro-hobby font--large">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-5 col-dt-4">
