Implement navbar basics.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
     <link rel="stylesheet" href="css/fluidable/fluidable-min.css">
 
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 
 <body class="themable">
     <div id="theme-switch" class="themable"></div>
+
+    <div class="menu-switch themable"></div>
+    <nav class="slider themable">
+        <div class="nav__title"></div>
+        <a href="index.html">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="projects.html">Projects</a>
+        <a href="gadgets.html">Gadgets</a>
+        <a href="https://gtmstechblog.wordpress.com">Blog</a>
+        <div class="nav__social"></div>
+    </nav>
+
 
     <div class="section hero font--large themable">
         <div class="container">
@@ -120,6 +133,7 @@
 
 
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/nav.js"></script>
     <script type="text/javascript">
         // Age calculation
         function getAge(dateString) {
