Cleaned up the navbar markup, removed the sidebar nav CSS.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
 <body class="themable">
     <div id="theme-switch" class="themable"></div>
 
-    <div class="menu-switch themable"></div>
-    <nav class="slider themable">
-        <div class="nav__title"></div>
+    <nav>
         <a href="index.html">Home</a>
-        <a href="resume.html">Resume</a>
-        <a href="projects.html">Projects</a>
-        <a href="gadgets.html">Gadgets</a>
+        <a href="#">Resume</a>
+        <a href="#">Projects</a>
+        <a href="#">Gadgets</a>
         <a href="https://gtmstechblog.wordpress.com">Blog</a>
-        <div class="nav__social"></div>
+        <!-- <div>Social Network buttons here</div> -->
     </nav>
 
 
