Updated about html text.

--- a/about.html
+++ b/about.html
@@ -14,132 +14,124 @@
     <title>Gautham's Website</title>
 
     <!-- <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'> -->
     <link href='fonts/oxygen.css' rel='stylesheet' type='text/css'>
-    <style type="text/css">
-        body { font-family: 'Oxygen', sans-serif; }
-        .light-font { font-weight: 300; }
-    </style>
+    <link href='fonts/play.css' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/fluidable/fluidable-min.css">
+    <link rel="stylesheet" href="css/Slidey.css">
 
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body class="bg-nebula">
-    <div class="section hero large-font dark-theme bg-nebgula">
-        <div class="container">
-            <div class="col-group">
-                <div class="col-mb-12 col-6">
-                    <img src="images/user.png" class="responsive" id="user" />
-                </div>
-                <div class="col-mb-12 col-6">
-                    <div id="hero-hi">Hi!</div>
-                    <div id="hero-name">I'm <strong>Gautham Yerroju</strong>.</div>
-                    <div id="hero-ticker">
-                        <ul>
-                            <li>INFP</li>
-                            <li>Programmer</li>
-                            <li>Artist</li>
-                            <li>Gamer</li>
-                            <li>Philosopher</li>
-                            <li>Sci-Fi Buff</li>
-                            <li>BatFan</li>
-                        </ul>
+<body class="themable">
+    <div id="theme-switch" class="themable"></div>
+
+    <nav class="slidey slidey--left slidey--styled">
+        <a href="#" class="slidey__brand">Gautham Yerroju</a>
+        <a href="index.html">Home</a>
+        <a href="#">Resume</a>
+        <a href="#">Projects</a>
+        <a href="https://gtmstechblog.wordpress.com">Blog</a>
+
+        <div class="slidey__close"></div>
+    </nav>
+    <div class="slidey__toggle"></div>
+
+    <div class="content">
+        <div class="section intro-me font--large">
+            <div class="container">
+                <div class="col-group">
+                    <div class="col-mb-12 col-5 col-dt-3">
+                        <!-- http://www.freeimages.com/photo/buddha-1310506 -->
+                        <img src="images/buddha_light.png" class="responsive rounded about-badge" />
+                    </div>
+                    <div class="col-mb-12 col-7 col-dt-9">
+                        <p>
+                            I am Gautham, <span id="age">25</span> years young, born in Hyderabad India. I am an INFP. Nicknamed the Idealist and the Dreamer, I constantly try to find my place in the world and think about the big questions of the universe.
+                        </p>
                     </div>
                 </div>
-                <div class="col-mb-12">
-                    <p>I love to code and design. On a random day and you'll find me coding, blogging, gaming or just thinking about the great questions of the universe. My dream is to build a J.A.R.V.I.S someday and of course, be Batman. A guy can dream.</p>
+            </div>
+        </div>
+        <div class="section intro-job font--large">
+            <div class="container">
+                <div class="col-group">
+                    <div class="col-mb-12 hide-tab">
+                        <img src="images/pc_light.png" class="responsive rounded about-badge" />
+                    </div>
+                    <div class="col-mb-12 col-7 col-dt-9">
+                        <p>
+                            A programmer by profession, I have a bachelors degree in Computer Science and Engineering and over three years of experience building automation frameworks and full stack web development at FactSet Research Systems.
+                        </p>
+                    </div>
+                    <div class="hide-mb col-5 col-dt-3">
+                        <img src="images/pc_light.png" class="responsive rounded about-badge" />
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="section intro large-font themable">
-        <div class="container">
-            <div class="col-group">
-                <div class="col-mb-12">
-                    <h1 class="text-center">Who am I?</h1>
-                    <p>
-                        I am Gautham Yerroju. Born and raised (mostly) in Hyderabad India, I am surprisingly averse to Biriyani. I am tall dark and handsome (and a little narcissistic to be saying that myself). I am an INFP, nicknamed the Idealist and the Dreamer. I constantly try to find my place in the universe and think about the big questions, like why I keep losing my keys.
-                    </p>
-                </div>
-                <div class="col-mb-12">
-                    <h1 class="text-center">What do I do?</h1>
-                    <p>
-                        I completed my undergraduation in Computer Science and Engineering in J.B. Institute of Engineering and Technology. I worked for over 3 years in teh Fortune 100 company FactSet Research Systems as an automation analyst, where I have learned about automation, front-end and backend web development, databases and much more.
-                    </p>
-                </div>
-                <div class="col-mb-12">
-                    <h1 class="text-center">What can I do?</h1>
-                    <p>
-                        I love to code and design. I have learned to code in school trying to make games and it stuck for life. Under my toolbelt I have knowledge of Object Oriented programming in almost all the languages I know, which include Ruby, Python, C++, Java, JavaScript, PHP and a few more scripting languages. My role in FactSet gave me experience as a full-stack web developer among other things.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section infp large-font themable">
-        <div class="container">
-            <h1 class="text-center">INFP</h1>
-            <p>
-                As an INFP, nicknamed the <a href="https://www.personalitypage.com/INFP.html">Idealist</a> and the <a href="http://www.mypersonality.info/personality-types/infp/">Dreamer</a>, I constantly try to find my place in the universe and think about the big questions. Like where I lost my keys.
-            </p>
-            <p>
-                Although, I believe no test can do justice to the unique blend of genetics and life experiences that make me who I am. Multiple tests and a blood sample might do the trick, but I wouldn't know.
-            </p>
-        </div>
-    </div>
-    <div class="section programmer large-font themable">
-        <div class="container">
-            <h1 class="text-center">Programmer</h1>
-            <p>
-                I code for a living and also for fun. I learned to code on my own when I was 14 years old trying to make games, and it kind of stuck. For life.
-            </p>
-            <p>
-                I started off with making addons for RPG Maker XP and a few games in Python and Java. In my job, I honed my <a href="https://xkcd.com/196/">command line fu</a> and learned full-stack web development among other things like PowerPoint presentations, late night meetings, bi-monthly parties and being more awesome.
-            </p>
-            <p>
-                Head over to my GitHub profile to check out some of my work.
-            </p>
-        </div>
-    </div>
-    <div class="section artist large-font themable">
-        <div class="container">
-            <h1 class="text-center">Artist</h1>
-            <p>
-                I may not be an artist by profession, but it's a hobby I developed when I wanted to make my own posters. I have a good eye for proportions and perspective. Coding has taken time away from developing this skill, but I channeled it into 2D graphic design. I have made many graphic game resourses for the Chaos Project game making community.
-            </p>
-            <p>Check out some of my work on DeviantART.</p>
-        </div>
-    </div>
-    <div class="section gamer large-font themable">
-        <div class="container">
-            <h1 class="text-center">Gamer</h1>
-            <p>
-                I see games as a unique form art, where the artists pull you into a different world and let you interact with it. Games, to me, are also examples of great design and awesome technical achievements. I always wondered how they managed to fit so many Pokemon into those tiny GBA cartridges...
-            </p>
-            <p>
-                I love role playing games like Chrono Trigger, Mass Effect, and really anything with a good story. Though RPGs are my favorite type of games, I also favor 3PS, RTS and FPS genres among other types of games.
-            </p>
-        </div>
-    </div>
-    <div class="section dev-log themable">
-        <div class="container">
-            <div class="col-group">
-                <div class="col-mb-12">
-                    <h1>This website is under construction.</h1>
-                    <p>In the meanwhile, have a look at the dev log (rendered dynamically from Markdown to HTML using <a href="https://github.com/evilstreak/markdown-js">markdown-js</a>)</p>
-                    <div id="dev-log">
-                        Loading dev log...
+        <div class="section intro-hobby font--large">
+            <div class="container">
+                <div class="col-group">
+                    <div class="col-mb-12 col-5 col-dt-3">
+                        <img src="images/hobby_light.png" class="responsive rounded about-badge" />
+                    </div>
+                    <div class="col-mb-12 col-7 col-dt-9">
+                        <p>
+                            In my free time, I like to play games, read books, catch up on tech blogs, do some blogging myself, watch TV shows and occasionally, doodle and play the keyboard.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            // Initialize Slidey
+            $(".slidey__toggle").click(function() {
+                $(".slidey").toggleClass("slidey--open");
+            });
+            $(".slidey__close").click(function() {
+                $(".slidey").removeClass("slidey--open")
+            });
+
+            // Age calculation
+            function getAge(dateString) {
+                var today = new Date();
+                var birthDate = new Date(dateString);
+                var age = today.getFullYear() - birthDate.getFullYear();
+                var m = today.getMonth() - birthDate.getMonth();
+                if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+                    age--;
+                }
+                return age;
+            }
+            $("#age").html(getAge("1990-08-06"));
+
+            // Initialize theme switcher
+            $("#theme-switch").click(function() {
+                $(".themable").toggleClass('dark-theme');
+            });
+
+            // Initialize dev log buttons
+            $("#dev-log-toggle").click(function() {
+                $("#dev-log").slideToggle(400, function() {
+                    if ( $("#dev-log-toggle").html() == "Take a look..." ) {
+                        $("#dev-log-toggle").html("Hide the log");
+                    } else {
+                        $("#dev-log-toggle").html("Take a look...");
+                    }
+                });
+            });
+            $("#dev-log-destroy").click(function() {
+                $(".section.devlog").hide();
+            });
+        });
+    </script>
 
     <script src="js/jquery.vticker.min.js"></script>
     <script type="text/javascript">
@@ -152,11 +144,12 @@
     <script type="text/javascript">
         $.ajax("log.md", {
             cache: false,
+            dataType: "text",
             success: function(data) {
                 $("#dev-log").html(markdown.toHTML(data));
             },
             error: function(jqXHR, statusText, errorThrown) {
-                $("#dev-log").html("Hm, there seems to be a problem loading the dev log.<br/>" + statusText + ": " + errorThrown);
+                $("#dev-log").html("Hm, there seems to be a problem loading the dev log.<br/>" + statusText + " " + jqXHR.status + ": " + errorThrown);
                 console.log("Error loading dev log.", jqXHR, statusText, errorThrown);
             }
         });
