--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/fluidable/fluidable-min.css">
+    <link rel="stylesheet" href="css/Slidey.css">
 
     <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -27,20 +28,22 @@
 <body class="themable">
     <div id="theme-switch" class="themable"></div>
 
-    <nav>
+    <nav class="slidey slidey--left slidey--styled">
+        <a href="#" class="slidey__brand">Gautham Yerroju</a>
         <a href="index.html">Home</a>
         <a href="#">Resume</a>
         <a href="#">Projects</a>
-        <a href="#">Gadgets</a>
         <a href="https://gtmstechblog.wordpress.com">Blog</a>
-        <!-- <div>Social Network buttons here</div> -->
     </nav>
+    <div class="slidey__toggle"><span class="slidey__toggle__lines"></span></div>
+    <div class="slidey__mask"></div>
+
 
     <div class="section hero font--large themable">
         <div class="container">
             <div class="col-group">
                 <div class="col-mb-12 col-6 col-dt-4">
-                    <img src="images/user.png" class="responsive rounded em10" id="user" />
+                    <img src="images/user.png" class="responsive rounded" id="user" />
                 </div>
                 <div class="col-mb-12 col-6 col-dt-8">
                     <div id="hero-name">Gautham Yerroju</div>
@@ -62,20 +65,6 @@
             </div>
         </div>
     </div>
-
-    <div class="section devlog">
-        <div class="container">
-            <div class="col-group">
-                <div class="col-mb-12">
-                    <p><strong>This website is under renovation.</strong> Meanwhile, have a look at the dev log (rendered from markdown using <a href="https://github.com/evilstreak/markdown-js">markdown-js</a>). <button id="dev-log-toggle">Take a look...</button> <button id="dev-log-destroy">Hide this</button></p>
-                    <div id="dev-log">
-                        Loading dev log...
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="section intro-me font--large">
         <div class="container">
             <div class="col-group">
@@ -123,44 +112,61 @@
         </div>
     </div>
 
-
-
-
+    <div class="section devlog" style="display: none;">
+        <div class="container">
+            <div class="col-group">
+                <div class="col-mb-12">
+                    <p><strong>This website is under renovation.</strong> Meanwhile, have a look at the dev log (rendered from markdown using <a href="https://github.com/evilstreak/markdown-js">markdown-js</a>). <button id="dev-log-toggle">Take a look...</button> <button id="dev-log-destroy">Hide this</button></p>
+                    <div id="dev-log">
+                        Loading dev log...
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/nav.js"></script>
     <script type="text/javascript">
-        // Age calculation
-        function getAge(dateString) {
-            var today = new Date();
-            var birthDate = new Date(dateString);
-            var age = today.getFullYear() - birthDate.getFullYear();
-            var m = today.getMonth() - birthDate.getMonth();
-            if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
-                age--;
-            }
-            return age;
-        }
-        $("#age").html(getAge("1990-08-06"));
-
-        // Theme switch
-        $("#theme-switch").click(function() {
-            $(".themable").toggleClass('dark-theme');
-        });
-
-        // Dev log toggle
-        $("#dev-log-toggle").click(function() {
-            $("#dev-log").slideToggle(400, function() {
-                if ( $("#dev-log-toggle").html() == "Take a look..." ) {
-                    $("#dev-log-toggle").html("Hide the log");
-                } else {
-                    $("#dev-log-toggle").html("Take a look...");
-                }
+        $(document).ready(function() {
+            // Initialize Slidey
+            $(".slidey__toggle").on("click", function() {
+                $(".slidey").toggleClass("slidey--open");
             });
-        });
+            $(".slidey__mask").on("click", function() {
+                $(".slidey").removeClass("slidey--open")
+            });
 
-        $("#dev-log-destroy").click(function() {
-            $(".section.devlog").hide();
+            // Age calculation
+            function getAge(dateString) {
+                var today = new Date();
+                var birthDate = new Date(dateString);
+                var age = today.getFullYear() - birthDate.getFullYear();
+                var m = today.getMonth() - birthDate.getMonth();
+                if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+                    age--;
+                }
+                return age;
+            }
+            $("#age").html(getAge("1990-08-06"));
+
+            // Initialize theme switcher
+            $("#theme-switch").click(function() {
+                $(".themable").toggleClass('dark-theme');
+            });
+
+            // Initialize dev log buttons
+            $("#dev-log-toggle").click(function() {
+                $("#dev-log").slideToggle(400, function() {
+                    if ( $("#dev-log-toggle").html() == "Take a look..." ) {
+                        $("#dev-log-toggle").html("Hide the log");
+                    } else {
+                        $("#dev-log-toggle").html("Take a look...");
+                    }
+                });
+            });
+            $("#dev-log-destroy").click(function() {
+                $(".section.devlog").hide();
+            });
         });
     </script>
 
