Removed CSS for devlog expand button.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
             </div>
         </div>
     </div>
+    <div class="section devlog">
+        <div class="container">
+            <div class="col-group">
+                <div class="col-mb-12">
+                    <p><strong>This website is under renovation.</strong> Meanwhile, have a look at the dev log (rendered from markdown using <a href="https://github.com/evilstreak/markdown-js">markdown-js</a>). <button id="dev-log-toggle">Take a look...</button> <button id="dev-log-destroy">Hide this</button></p>
+                    <div id="dev-log">
+                        Loading dev log...
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section intro-me font--large">
         <div class="container">
             <div class="col-group">
@@ -107,19 +119,6 @@
                     <p>
                         In my free time, I like to play games, read books, catch up on tech blogs, do some blogging myself, watch TV shows and occasionally, doodle and play the keyboard.
                     </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="section devlog" style="display: none;">
-        <div class="container">
-            <div class="col-group">
-                <div class="col-mb-12">
-                    <p><strong>This website is under renovation.</strong> Meanwhile, have a look at the dev log (rendered from markdown using <a href="https://github.com/evilstreak/markdown-js">markdown-js</a>). <button id="dev-log-toggle">Take a look...</button> <button id="dev-log-destroy">Hide this</button></p>
-                    <div id="dev-log">
-                        Loading dev log...
-                    </div>
                 </div>
             </div>
         </div>
